{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 403,
  "lineage": "6608d718-bc3e-985b-8f15-c6d2eea46f62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:route-table/rtb-0f52ed6f54026be22",
            "default_route_table_id": "rtb-0f52ed6f54026be22",
            "id": "rtb-0f52ed6f54026be22",
            "owner_id": "450094323127",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e21cd477c803227",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "caseapp-public-rt"
            },
            "tags_all": {
              "Name": "caseapp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-new",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd4671f0b6fb7757",
            "domain": "vpc",
            "id": "eipalloc-0fd4671f0b6fb7757",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-127-251-34.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.251.34",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:internet-gateway/igw-03e21cd477c803227",
            "id": "igw-03e21cd477c803227",
            "owner_id": "450094323127",
            "tags": {
              "Name": "caseapp-igw-new"
            },
            "tags_all": {
              "Name": "caseapp-igw-new"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:loadbalancer/app/caseapp-backend-lb/106eab038b1539d5",
            "arn_suffix": "app/caseapp-backend-lb/106eab038b1539d5",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-caseapp-backend-lb-1235761676.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:loadbalancer/app/caseapp-backend-lb/106eab038b1539d5",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "caseapp-backend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fa77865af8574759"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-016ed2b8d4653b7f9"
              },
              {
                "subnet_id": "subnet-0b0ebee1b2532cafa"
              },
              {
                "subnet_id": "subnet-0ef342b47ed4cc07c"
              }
            ],
            "subnets": [
              "subnet-016ed2b8d4653b7f9",
              "subnet-0b0ebee1b2532cafa",
              "subnet-0ef342b47ed4cc07c"
            ],
            "tags": {
              "Name": "caseapp-backend-lb"
            },
            "tags_all": {
              "Name": "caseapp-backend-lb"
            },
            "vpc_id": "vpc-0a517b66d389f35e9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb_access_sg",
            "aws_security_group.asg_backend_lb_access_sg",
            "aws_security_group.asg_web_access_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:loadbalancer/app/caseapp-web-lb/3abb1fd0b16748d0",
            "arn_suffix": "app/caseapp-web-lb/3abb1fd0b16748d0",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "caseapp-web-lb-610235318.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:loadbalancer/app/caseapp-web-lb/3abb1fd0b16748d0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "caseapp-web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d3714d6292c68192"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ffbdae3ec94b16b"
              },
              {
                "subnet_id": "subnet-0c14f49a27f87e5ad"
              },
              {
                "subnet_id": "subnet-0c3d3996af8bec7ad"
              }
            ],
            "subnets": [
              "subnet-06ffbdae3ec94b16b",
              "subnet-0c14f49a27f87e5ad",
              "subnet-0c3d3996af8bec7ad"
            ],
            "tags": {
              "Name": "caseapp-web-lb"
            },
            "tags_all": {
              "Name": "caseapp-web-lb"
            },
            "vpc_id": "vpc-0a517b66d389f35e9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb_access_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_alb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:listener/app/caseapp-backend-lb/106eab038b1539d5/f2c8cb9866a18c12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:targetgroup/caseapp-backend-server-tg-http/53aa7de29c9b6b4b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:listener/app/caseapp-backend-lb/106eab038b1539d5/f2c8cb9866a18c12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:loadbalancer/app/caseapp-backend-lb/106eab038b1539d5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.backend_alb",
            "aws_lb_target_group.backend_alb_tg_http",
            "aws_security_group.alb_access_sg",
            "aws_security_group.asg_backend_lb_access_sg",
            "aws_security_group.asg_web_access_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_alb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:listener/app/caseapp-web-lb/3abb1fd0b16748d0/0ee2af675c6d6a03",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:targetgroup/caseapp-web-server-tg-http/a2ea756d95a60316",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:listener/app/caseapp-web-lb/3abb1fd0b16748d0/0ee2af675c6d6a03",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:loadbalancer/app/caseapp-web-lb/3abb1fd0b16748d0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_target_group.web_alb_tg_http",
            "aws_security_group.alb_access_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_alb_tg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:targetgroup/caseapp-backend-server-tg-http/53aa7de29c9b6b4b",
            "arn_suffix": "targetgroup/caseapp-backend-server-tg-http/53aa7de29c9b6b4b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:targetgroup/caseapp-backend-server-tg-http/53aa7de29c9b6b4b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "caseapp-backend-server-tg-http",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "dependencies": [
            "aws_lb.backend_alb",
            "aws_security_group.alb_access_sg",
            "aws_security_group.asg_backend_lb_access_sg",
            "aws_security_group.asg_web_access_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_alb_tg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:targetgroup/caseapp-web-server-tg-http/a2ea756d95a60316",
            "arn_suffix": "targetgroup/caseapp-web-server-tg-http/a2ea756d95a60316",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:450094323127:targetgroup/caseapp-web-server-tg-http/a2ea756d95a60316",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "caseapp-web-server-tg-http",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "dependencies": [
            "aws_lb.web_alb",
            "aws_security_group.alb_access_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd4671f0b6fb7757",
            "association_id": "eipassoc-0e9701834bcb11324",
            "connectivity_type": "public",
            "id": "nat-0d521942be1494837",
            "network_interface_id": "eni-0756df8d1d00624b6",
            "private_ip": "10.0.1.235",
            "public_ip": "3.127.251.34",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06ffbdae3ec94b16b",
            "tags": {
              "Name": "caseapp-nat"
            },
            "tags_all": {
              "Name": "caseapp-nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw-new",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:route-table/rtb-0d2d1aa8824ee7924",
            "id": "rtb-0d2d1aa8824ee7924",
            "owner_id": "450094323127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d521942be1494837",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "caseapp-private-rt"
            },
            "tags_all": {
              "Name": "caseapp-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw-new",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0556e3443b83a306b",
            "route_table_id": "rtb-0d2d1aa8824ee7924",
            "subnet_id": "subnet-0b0ebee1b2532cafa"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw-new",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e52d59f068a78b4e",
            "route_table_id": "rtb-0d2d1aa8824ee7924",
            "subnet_id": "subnet-016ed2b8d4653b7f9"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw-new",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b9ec7670fa6615d",
            "route_table_id": "rtb-0d2d1aa8824ee7924",
            "subnet_id": "subnet-0ef342b47ed4cc07c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw-new",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd17753fefed18cc",
            "route_table_id": "rtb-0f52ed6f54026be22",
            "subnet_id": "subnet-06ffbdae3ec94b16b"
          },
          "dependencies": [
            "aws_default_route_table.public_rt",
            "aws_internet_gateway.igw-new",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da4aa211e16cd773",
            "route_table_id": "rtb-0f52ed6f54026be22",
            "subnet_id": "subnet-0c14f49a27f87e5ad"
          },
          "dependencies": [
            "aws_default_route_table.public_rt",
            "aws_internet_gateway.igw-new",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ff488ee5b675d41",
            "route_table_id": "rtb-0f52ed6f54026be22",
            "subnet_id": "subnet-0c3d3996af8bec7ad"
          },
          "dependencies": [
            "aws_default_route_table.public_rt",
            "aws_internet_gateway.igw-new",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:security-group/sg-0d3714d6292c68192",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3714d6292c68192",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "caseapp-alb-access-sg",
            "name_prefix": "",
            "owner_id": "450094323127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "caseapp-alb-access-sg"
            },
            "tags_all": {
              "Name": "caseapp-alb-access-sg"
            },
            "timeouts": {
              "create": null,
              "delete": "3m"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_backend_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:security-group/sg-0aee372e715b02a64",
            "description": "Allow http traffic from ASG-BACKEND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aee372e715b02a64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow http traffic from asg-backend sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa77865af8574759"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "caseapp-asg-backend-access-sg",
            "name_prefix": "",
            "owner_id": "450094323127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "caseapp-asg_web-access-sg"
            },
            "tags_all": {
              "Name": "caseapp-asg_web-access-sg"
            },
            "timeouts": {
              "create": null,
              "delete": "3m"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_access_sg",
            "aws_security_group.asg_backend_lb_access_sg",
            "aws_security_group.asg_web_access_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_backend_lb_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:security-group/sg-0fa77865af8574759",
            "description": "Allow http traffic from ASG-BACKEND-LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa77865af8574759",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow http traffic from asg-backend-lb sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2e57eb2b9e2db94"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "caseapp-asg-backend-lb-access-sg",
            "name_prefix": "",
            "owner_id": "450094323127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "caseapp-asg_web-access-sg"
            },
            "tags_all": {
              "Name": "caseapp-asg_web-access-sg"
            },
            "timeouts": {
              "create": null,
              "delete": "3m"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_access_sg",
            "aws_security_group.asg_web_access_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_web_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:security-group/sg-0c2e57eb2b9e2db94",
            "description": "Allow http traffic from ASG-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2e57eb2b9e2db94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow http traffic from asg-web sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3714d6292c68192"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "allow https traffic from asg-web sg",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3714d6292c68192"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "caseapp-asg-web-access-sg",
            "name_prefix": "",
            "owner_id": "450094323127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "caseapp-asg-web-access-sg"
            },
            "tags_all": {
              "Name": "caseapp-asg-web-access-sg"
            },
            "timeouts": {
              "create": null,
              "delete": "3m"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_access_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:subnet/subnet-0b0ebee1b2532cafa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0ebee1b2532cafa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450094323127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-1",
              "Subnet": "Private"
            },
            "tags_all": {
              "Name": "Private-Subnet-1",
              "Subnet": "Private"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:subnet/subnet-016ed2b8d4653b7f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016ed2b8d4653b7f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450094323127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-2",
              "Subnet": "Private"
            },
            "tags_all": {
              "Name": "Private-Subnet-2",
              "Subnet": "Private"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:subnet/subnet-0ef342b47ed4cc07c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef342b47ed4cc07c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450094323127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-3",
              "Subnet": "Private"
            },
            "tags_all": {
              "Name": "Private-Subnet-3",
              "Subnet": "Private"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:subnet/subnet-06ffbdae3ec94b16b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ffbdae3ec94b16b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450094323127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1",
              "Subnet": "Public"
            },
            "tags_all": {
              "Name": "Public-Subnet-1",
              "Subnet": "Public"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:subnet/subnet-0c14f49a27f87e5ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c14f49a27f87e5ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450094323127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-2",
              "Subnet": "Public"
            },
            "tags_all": {
              "Name": "Public-Subnet-2",
              "Subnet": "Public"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:subnet/subnet-0c3d3996af8bec7ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3d3996af8bec7ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450094323127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-3",
              "Subnet": "Public"
            },
            "tags_all": {
              "Name": "Public-Subnet-3",
              "Subnet": "Public"
            },
            "vpc_id": "vpc-0a517b66d389f35e9"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:450094323127:vpc/vpc-0a517b66d389f35e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b9036e7f04d4ede",
            "default_route_table_id": "rtb-0f52ed6f54026be22",
            "default_security_group_id": "sg-0e02720f800caa7cd",
            "dhcp_options_id": "dopt-0fcdf5ca77287fbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a517b66d389f35e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f52ed6f54026be22",
            "owner_id": "450094323127",
            "tags": {
              "Name": "midas-demo-vpc"
            },
            "tags_all": {
              "Name": "midas-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}